# API-Contabilidade

./: .env.example  .gitignore  .pre-commit-config.yaml  ADR-001-api-contabil-universal.md  ADR-002-onboarding-certificado-a1.md  ADR-003-hub-multifonte-e-mcp.md  CAPABILITIES.md  CONTEXT.md  PEDIDO-INFO.md  PROGRESS.md  README.md  SECURITY.md  SEMANA-1-CHECKLIST.md  docker-compose.yml  fly.toml  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  main.py
app/adapters/: focus_nfe.py  serpro.py
app/api/v1/: cadastro.py  nfe.py  simples_nacional.py  webhooks.py
app/mcp/: confirmation.py  server.py
tests/: test_health.py
