[project]
name = "api-contabil"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "ASYNC", "RUF"]
ignore = ["S101"]  # assert em testes é ok

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# B101 (assert) e B104 (bind 0.0.0.0) aceitos: B104 é intencional no MCP server em container.
skips = ["B101", "B104"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
